takahe/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: takahe
  name: webserver
spec:
  rules:
  - host: takahe.shuuji3.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webserver
            port:
              name: web
