takahe/webserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: takahe
  name: webserver
spec:
  selector:
    matchLabels:
      run: webserver
  replicas: 1
  template:
    metadata:
      labels:
        run: webserver
    spec:
      volumes:
        - name: takahe-media
          persistentVolumeClaim:
            claimName: takahe-media-pvc
      containers:
        - name: webserver
          image: jointakahe/takahe:latest
          args:
            - "gunicorn"
            - "takahe.wsgi:application"
            - "-w"
            - "1"
            - "-b"
            - "0.0.0.0:8000"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: takahe-media
              mountPath: /takahe/media/
          resources:
            requests:
              memory: "1024Mi"
            limits:
              memory: "1024Mi"
#          livenessProbe:
#            httpGet:
#              path: /
#              port: 8000
#            periodSeconds: 5
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 8000
#            initialDelaySeconds: 5
#            periodSeconds: 5
#          startupProbe:
#            httpGet:
#              path: /
#              port: 8000
#            initialDelaySeconds: 2
#            failureThreshold: 30
#            periodSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  namespace: takahe
  name: webserver
  labels:
    run: webserver
spec:
  ports:
    - port: 80
      targetPort: 8000
      name: web
  selector:
    run: webserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: takahe
  name: webserver
spec:
  rules:
    - host: takahe.shuuji3.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver
                port:
                  name: web
